# recruiter-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: jd.txt  resume.tex
src/recruiter_agent/: cli.py  config.py
src/recruiter_agent/agent/: graph.py  nodes.py  prompts.py  state.py
src/recruiter_agent/models/: schemas.py
src/recruiter_agent/tools/: latex.py  scraper.py
