[project]
name = "recruiter-agent"
version = "0.1.0"
description = "CLI tool to enhance LaTeX resumes against job descriptions using AI"
readme = "README.md"
authors = [
    { name = "Akshay", email = "ashegaonkar@wiser.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.3",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "trafilatura>=2.0",
    "pydantic>=2.0",
    "langchain-google-genai>=4.2.1",
    "python-dotenv>=1.2.2",
    "pylatexenc>=2.10",
]

[project.scripts]
recruiter-agent = "recruiter_agent.cli:app"
ra = "recruiter_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recruiter_agent"]
